@@ -1,3 +1,8 @@
+2003-10-23  Christopher Faylor  <cgf@redhat.com>
+
+	* fhandler_tty.cc (fhandler_tty_slave::ioctl): Properly set return
+	value in FIONBIO case.
+
 2003-10-23  Corinna Vinschen  <corinna@vinschen.de>
 
 	* fhandler_proc.cc (format_proc_partitions): Use new device code
